customizing for vehicle registration

--- a/vehicles/Views/Shared/_Layout.cshtml
+++ b/vehicles/Views/Shared/_Layout.cshtml
@@ -29,13 +29,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Home</a>
+                <a asp-area="" asp-controller="VehicleRegistration" asp-action="Index" class="navbar-brand">Home</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Create">Register</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="VehicleRegistration" asp-action="Create">Register</a></li>
+                    <li><a asp-area="" asp-controller="VehicleRegistration" asp-action="About">About</a></li>
+                    <li><a asp-area="" asp-controller="VehicleRegistration" asp-action="Contact">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -48,7 +48,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - vehicles</p>
+            <p>&copy; 2019 - Department of Motor Vehicles</p>
         </footer>
     </div>
 
