--- a/vehicles/Views/Shared/_Layout.cshtml
+++ b/vehicles/Views/Shared/_Layout.cshtml
@@ -44,11 +44,11 @@
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
-        <p>Name of Server is @Dns.GetHostName()</p>
+        <p>Server name - @Dns.GetHostName()</p>
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - Department of Motor Vehicles</p>
+            <p>&copy; 2019 - Motor Vehicle Department</p>
         </footer>
     </div>
 
